<resources>
    <string name="app_name">Project</string>

    <string name="AbsWorkout">ABS Workout</string>
    <string name="Day1">DAY 1</string>
    <string name="SideStepJacks">Side Step Jacks</string>
    <string name="SideStepJacks_desc">30 S</string>
    <string name="StandingObliqueCrunchesLeft">Standing Oblique Crunches Left</string>
    <string name="StandingObliqueCrunchesLeft_desc">X 12</string>
    <string name="StandingObliqueCrunchesRight">Standing Oblique Crunches Right</string>
    <string name="StandingObliqueCrunchesRight_desc">X 12</string>
    <string name="CrossoverCrunch">Crossover Crunch</string>
    <string name="CrossoverCrunch_desc">X 10</string>
    <string name="HeelTouch">Heel Touch</string>
    <string name="HeelTouch_desc">20 S</string>
    <string name="ReclinedObliqueTwist">Reclined Oblique Twist</string>
    <string name="ReclinedObliqueTwist_desc">X 10</string>

    <string name="LegWorkout">Leg Workout</string>
    <string name="PlieSquats1">Plie Squats</string>
    <string name="PlieSquats1_desc">30 S</string>
    <string name="FrogPress">Frog Press</string>
    <string name="FrogPress_desc">30 S</string>
    <string name="DonkeyKicksLeft">Donkey Kicks Left</string>
    <string name="DonkeyKicksLeft_desc">30 S</string>
    <string name="DonkeyKicksRight">Donkey Kicks Right</string>
    <string name="DonkeyKicksRight_desc">30 S</string>
    <string name="SideLegCirclesLeft">Side Leg Circles Left</string>
    <string name="SideLegCirclesLeft_desc">30 S</string>
    <string name="SideLegCirclesRight">Side Leg Circles Right</string>
    <string name="SideLegCirclesRight_desc">30 S</string>
    <string name="PlieSquats2">Plie Squats</string>
    <string name="PlieSquats2_desc">30 S</string>

    <string name="ArmWorkout">Arm Workout</string>
    <string name="ArmScissors1">Arm Scissors</string>
    <string name="ArmScissors1_desc">30 S</string>
    <string name="ClapsOverHead">Claps Over Head</string>
    <string name="ClapsOverHead_desc">30 S</string>
    <string name="ChestPressPulse">Chest Press Pulse</string>
    <string name="ChestPressPulse_desc">30 S</string>
    <string name="Punches">Punches</string>
    <string name="Punches_desc">30 S</string>
    <string name="SeatedOverheadTricepExtension">Seated Overhead Tricep Extension</string>
    <string name="SeatedOverheadTricepExtension_desc">30 S</string>
    <string name="ArmScissors2">Arm Scissors</string>
    <string name="ArmScissors2_desc">30 S</string>

    <string name="BurningHIIT">Burning HIIT</string>
    <string name="HighStepping">High Stepping</string>
    <string name="HighStepping_desc">30 S</string>
    <string name="SideHop">Side Hop</string>
    <string name="SideHop_desc">30 S</string>
    <string name="Squats">Squats</string>
    <string name="Squats_desc">X 12</string>
    <string name="WallPushUps">Wall Push-Ups</string>
    <string name="WallPushUps_desc">X 12</string>
    <string name="ButtBridge">Butt Bridge</string>
    <string name="ButtBridge_desc">X 10</string>
    <string name="FireHydrantLeft">Fire Hydrant Left</string>
    <string name="FireHydrantLeft_desc">X 8</string>
    <string name="FireHydrantRight">Fire Hydrant Right</string>
    <string name="FireHydrantRight_desc">X 8 </string>
    <string name="let_s_train_buddy">Let\'s Train Buddy</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="bg_image">bg_image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="register">Register</string>
    <string name="not_have_account">Not Have Account ?</string>
    <string name="enter_your_password">enter your password</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="have_account">Have Account ?</string>
</resources>
