<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity">
<!--    android:background="@drawable/background">-->
    <ImageView
        android:id="@+id/img_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_black"
        android:contentDescription="@string/bg_image" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_black"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bebasneue"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_your_account"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="100dp">
            <!--email-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="50dp"
                android:background="@drawable/shape"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />

            <!--password-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="50dp"
                android:background="@drawable/shape"
                android:textColorHint="@color/white"
                android:paddingLeft="10dp"
                android:hint="@string/enter_your_password"
                android:drawableEnd="@drawable/eye"
                android:paddingRight="10dp"
                android:autofillHints=""
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#19A54A"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="520dp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>